[project]
name = "dasc7606a-b-a2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "bitsandbytes>=0.48.2",
    "datasets>=4.3.0",
    "evaluate>=0.4.6",
    "huggingface-hub>=0.36.0",
    "numpy>=2.3.4",
    "peft>=0.17.1",
    "protobuf>=6.33.0",
    "sacrebleu>=2.5.1",
    "sentencepiece>=0.2.1",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "trl>=0.24.0",
]

[tool.setuptools.packages.find]
exclude = ["tests", "scripts"]